--- a/gnome/dconf.in
+++ b/gnome/dconf.in
@@ -207,8 +207,9 @@ name='ranger'
 command-history=['terminal', '', 'ls', 'firefox', 'gnome-terminal -- ranger']
 
 [org/gnome/shell/extensions/dash-to-dock]
-dock-fixed=true
-dock-position='LEFT'
+autohide=false
+dock-fixed=false
+intellihide=false
 preferred-monitor=0
 
 [org/gnome/shell/keybindings]
