Open terminal in new window, instead of tab.

--- a/gnome/dconf.in
+++ b/gnome/dconf.in
@@ -223,7 +223,7 @@ toggle-overview=['<Alt>d']
 enabled=false
 
 [org/gnome/terminal/legacy]
-new-terminal-mode='tab'
+new-terminal-mode='window'
 
 [org/gnome/terminal/legacy/keybindings]
 close-tab='<Primary>w'
