--- a/python/rc.conf
+++ b/python/rc.conf
@@ -405,7 +405,7 @@ map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
 # Tagging / Marking
-map t       tag_toggle
+#map t       tag_toggle
 map ut      tag_remove
 map "<any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
@@ -576,15 +576,15 @@ map <S-TAB>   tab_move -1
 #map gn        tab_new
 #map gc        tab_close
 map uq        tab_restore
-map <a-1>     tab_open 1
-map <a-2>     tab_open 2
-map <a-3>     tab_open 3
-map <a-4>     tab_open 4
-map <a-5>     tab_open 5
-map <a-6>     tab_open 6
-map <a-7>     tab_open 7
-map <a-8>     tab_open 8
-map <a-9>     tab_open 9
+map t1        tab_open 1
+map t2        tab_open 2
+map t3        tab_open 3
+map t4        tab_open 4
+map t5        tab_open 5
+map t6        tab_open 6
+map t7        tab_open 7
+map t8        tab_open 8
+map t9        tab_open 9
 map <a-r>     tab_shift 1
 map <a-l>     tab_shift -1
 
