map v to open vim straight

--- a/python/rc.conf
+++ b/python/rc.conf
@@ -376,7 +376,7 @@ map S shell $SHELL
 map s terminal
 #map s  console shell%space
 map V console shell vim%space
-map v open_with vim t
+map v shell vim %s
 #map f shell $TERMINAL -e ranger & disown  # makes no sense, better to use Alt+Number
 map f console find%space
 #map #  console shell -p%space
